RESOLVED FIXED75224
Fix mutation observer build after didMoveToNewDocument change
https://bugs.webkit.org/show_bug.cgi?id=75224
Summary Fix mutation observer build after didMoveToNewDocument change
Darin Adler
Reported 2011-12-25 23:17:46 PST
Fix mutation observer build after didMoveToNewDocument change
Attachments
Patch (3.09 KB, patch)
2011-12-25 23:18 PST, Darin Adler
morrita: review+
Darin Adler
Comment 1 2011-12-25 23:18:52 PST
Hajime Morrita
Comment 2 2011-12-26 03:00:50 PST
Comment on attachment 120530 [details] Patch Thanks for your help! Win bot redness looks flaky.
WebKit Review Bot
Comment 3 2011-12-26 03:53:30 PST
Comment on attachment 120530 [details] Patch Rejecting attachment 120530 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: bCore/dom/Node.cpp:2501: error: the address of 'void WebCore::didMoveToNewDocumentWasCalled()' will always evaluate as 'true' make: *** [out/Debug/obj.target/webcore_dom/Source/WebCore/dom/Node.o] Error 1 make: *** Waiting for unfinished jobs.... Failed to run "['Tools/Scripts/build-webkit', '--debug', '--chromium', '--update-chromium']" exit_code: 2 lways evaluate as 'true' make: *** [out/Debug/obj.target/webcore_dom/Source/WebCore/dom/Node.o] Error 1 make: *** Waiting for unfinished jobs.... Full output: http://queues.webkit.org/results/11038037
Darin Adler
Comment 4 2011-12-26 07:21:45 PST
Lucas Forschler
Comment 5 2019-02-06 09:03:06 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note You need to log in before you can comment on or make changes to this bug.