Fix mutation observer build after didMoveToNewDocument change https://bugs.webkit.org/show_bug.cgi?id=75224

Reviewed by Hajime Morita.

* dom/Node.cpp:
(WebCore::willCallDidMoveToNewDocument): Added.
(WebCore::didMoveToNewDocumentWasCalled): Added.
(WebCore::Node::setDocument): Call new debugging function.
(WebCore::Node::didMoveToNewDocument): Ditto. Also use ASSERT_UNUSED
unconditionally rather than UNUSED_PARAM inside and #if. Also added
a new assertion that checks that hte old document was passed through
properly.


Canonical link: https://commits.webkit.org/91990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103685 268f45cc-cd09-0410-ab3c-d52691b4dbfc